# tg-bot-for-localization

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
utils/: locale_svc.py  paths.py  tg_file_context.py
utils/tests/: test_flatten_unflutten_dict_fn.py
