[tool.poetry]
name = "tg-bot-for-localization"
version = "0.1.0"
description = ""
authors = ["VAA <vaa@weco3.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
openpyxl = "^3.1.2"
chardet = "^5.2.0"
expiringdict = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
